# Transfer-Learning-Library

./: pyproject.toml
common/vision/datasets/segmentation/: __init__.py  pipe.py  segmentation_list.py
common/vision/transforms/: segmentation.py
examples/domain_adaptation/semantic_segmentation/: cycada.sh
